--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-sweetalert": "^0.0.1",
+    "react-toastify": "^11.0.2",
     "swiper": "^11.1.15",
     "yup": "^1.6.1"
   },
